change base tsconfig

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@solenopsys/fl-datasheets",
   "version": "0.1.0",
   "scripts": {
-    "build": "ng-packagr -p ng-package.json -c ../../../../tsconfig.base.json"
+    "build": "ng-packagr -p ng-package.json -c ../../../../tsconfig.packages.json"
   },
   "peerDependencies": {
     "json5": "^2.2.3",
