--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "xs-pack"
   },
-  "peerDependencies": {
+  "dependencies": {
     "json5": "^2.2.3",
     "ng2-pdfjs-viewer": "^15.0.0"
   }
